# wsh

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix  shell.nix
.claude-plugin/: plugin.json
demo/: README.md  demo.sh  flake.nix  sim-agent.sh  sim-build.sh  sim-lint.sh
docs/: FUTURE.md  VISION.md
docs/api/: README.md  alt-screen.md  authentication.md  errors.md  input-capture.md  openapi.yaml  overlays.md  panels.md  websocket.md
docs/plans/: 2026-02-03-implementation-roadmap.md  2026-02-04-phase2-terminal-parsing-design.md  2026-02-07-overlay-input-capture-design.md  2026-02-07-overlay-input-capture-implementation.md  2026-02-09-phase3-api-documentation-design.md  2026-02-09-phase3-api-documentation-implementation.md  2026-02-10-panels-design.md  2026-02-10-websocket-request-response-implementation.md  2026-02-11-ai-skills-design.md  2026-02-11-server-mode-implementation.md  2026-02-12-generative-ui-design.md  2026-02-12-generative-ui-implementation.md  2026-02-12-mcp-server-design.md  2026-02-12-mcp-server-implementation.md  2026-02-12-session-management-design.md  2026-02-13-external-orchestrator-design.md  2026-02-13-lifecycle-stress-tests-design.md  2026-02-17-card-stack-queue-design.md  2026-02-18-client-side-queue-design.md  2026-02-19-session-tagging-design.md  2026-02-19-session-tagging-implementation.md  2026-02-19-web-ui-redesign-implementation.md  2026-02-20-sidebar-thumbnail-grid-design.md  2026-02-20-web-ui-polish-design.md  2026-02-20-web-ui-polish-implementation.md  2026-02-23-queue-view-ux-design.md  2026-02-23-queue-view-ux-implementation.md  2026-02-25-backend-federation-design.md  2026-02-25-backend-federation-implementation.md
orchestrator/: README.md  __init__.py  config.py  engine.py  main.py  models.py  pyproject.toml  server.py  store.py  test_queue.py  wsh_client.py
skills/wsh/agent-orchestration/: SKILL.md
skills/wsh/cluster-orchestration/: SKILL.md
skills/wsh/core/: SKILL.md
skills/wsh/core-mcp/: SKILL.md
skills/wsh/drive-process/: SKILL.md
skills/wsh/generative-ui/: SKILL.md
skills/wsh/input-capture/: SKILL.md
skills/wsh/monitor/: SKILL.md
skills/wsh/multi-session/: SKILL.md
skills/wsh/tui/: SKILL.md
skills/wsh/visual-feedback/: SKILL.md
src/: activity.rs  api.rs  broker.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs  pty.rs  server.rs  session.rs  terminal.rs  tls.rs
src/api/: auth.rs  error.rs  handlers.rs  mod.rs  origin.rs  proxy.rs  ticket.rs  web.rs  ws_methods.rs
src/federation/: auth.rs  connection.rs  ip_access.rs  manager.rs  mod.rs  registry.rs  sanitize.rs
src/input/: events.rs  focus.rs  keys.rs  mod.rs  mode.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
src/overlay/: mod.rs  render.rs  store.rs  types.rs
src/panel/: coordinator.rs  layout.rs  render.rs  store.rs  types.rs
src/parser/: ansi.rs  events.rs  format.rs  mod.rs  state.rs  task.rs  tests.rs
tests/: alt_screen_integration.rs  api_integration.rs  auth_integration.rs  e2e_concurrent_input.rs  e2e_http.rs  e2e_websocket_input.rs  federation_api.rs  federation_e2e.rs  federation_security.rs  graceful_shutdown.rs  idle_integration.rs  input_capture_integration.rs  lifecycle_stress.rs  mcp_http.rs  mcp_stdio.rs  overlay_integration.rs  panel_integration.rs  parser_integration.rs  pty_integration.rs  quiesce_integration.rs  reliability_hardening.rs  server_client_e2e.rs  server_instance_e2e.rs  session_management.rs  stop_e2e.rs  tagging_integration.rs  tls_integration.rs  ws_json_methods.rs  ws_server_integration.rs
tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-dist/: index.html
web/src/: app.tsx  main.tsx
web/src/api/: orchestrator.ts  types.ts  ws.ts
web/src/components/: AutoGrid.tsx  BottomSheet.tsx  CardStack.tsx  CommandPalette.tsx  DepthCarousel.tsx  InputBar.tsx  LayoutShell.tsx  MainContent.tsx  MiniViewPreview.tsx  PageIndicator.tsx  QueueCard.tsx  QueueView.tsx  ResizeHandle.tsx  ServerList.tsx  SessionCarousel.tsx  SessionGrid.tsx  SessionPane.tsx  SessionThumbnail.tsx  ShortcutSheet.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  ThumbnailCell.tsx  TiledLayout.tsx
web/src/queue/: detector.ts
web/src/state/: groups.ts  sessions.ts  terminal.ts
web/src/styles/: terminal.css  (+1 more)
(+1 files in other folders)
