[package]
name = "wsh"
version = "0.1.0"
edition = "2021"
license = "ISC"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
tower_governor = "0.8"
portable-pty = "0.8"
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
base64 = "0.22"
bytes = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
avt = "0.17.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
uuid = { version = "1.20.0", features = ["v4"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmcp = { version = "0.15", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
hostname = "0.4"
dirs = "5"
libc = "0.2"
subtle = "2"
rust-embed = "8"
mime_guess = "2"
tokio-tungstenite = "0.26"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tempfile = "3"
