[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wsh-orchestrator"
version = "0.1.0"
description = "External orchestrator for coordinating wsh sessions and project context"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wsh-orchestrator = "orchestrator.main:main"
